cluster/apps/arr/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "sonarr"
  namespace: "arr"
  labels:
    app.kubernetes.io/name: sonarr
spec:
  type: "ClusterIP"
  selector:
    app.kubernetes.io/name: sonarr
  ports:
    - port: 8080
      targetPort: http
      protocol: "TCP"
      name: "sonarr"
